--- a/src/test/resources/application-unit-test.yaml
+++ b/src/test/resources/application-unit-test.yaml
@@ -17,8 +17,8 @@ spring:
       ddl-auto: create-drop
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
 
 logging:
   level:
-    sql: info
     root: info
