--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,20 @@
 name: todo-api
 
 services:
+  api:
+    build: .
+    ports:
+      - '8080:8080'
+    environment:
+      - SPRING_PROFILES_ACTIVE=test
+    depends_on:
+      - db
   db:
     image: mysql:latest
     ports:
       - "3306:3306"
     volumes:
-      - data:/var/lib/mysql
+      - todo-api-data-db:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=secretpw
       - MYSQL_DATABASE=DEV
@@ -14,4 +22,4 @@ services:
       - MYSQL_PASSWORD=secret
 
 volumes:
-  data:
+  todo-api-data-db:
