--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -6,7 +6,7 @@ spring:
   application:
     name: Todo-api
   datasource:
-    url: jdbc:mysql://localhost:3306/DEV
+    url: jdbc:mysql://db:3306/DEV
     username: USER_TODO
     password: secret
     driver-class-name: com.mysql.jdbc.Driver
@@ -15,7 +15,7 @@ spring:
       maximum-pool-size: 5
   flyway:
     enabled: true
-    url: jdbc:mysql://localhost:3306/DEV
+    url: jdbc:mysql://db:3306/DEV
     user: root
     password: secretpw
     table: FLYWAY_SCHEMA_HISTORY
