configure jwt token authentication

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,3 +1,6 @@
+todo-api:
+  jwt-secret: ${JWT_SECRET}
+  jwt-issuer: ${JWT_ISSUER}
 swagger:
   title: TODO API
   description: Documentação on-line da API
@@ -6,7 +9,7 @@ spring:
   application:
     name: Todo-api
   datasource:
-    url: jdbc:mysql://localhost:3306/DEV
+    url: jdbc:mysql://localhost:3306/DEV?allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: USER_TODO
     password: secret
     driver-class-name: com.mysql.jdbc.Driver
@@ -15,7 +18,7 @@ spring:
       maximum-pool-size: 5
   flyway:
     enabled: true
-    url: jdbc:mysql://localhost:3306/DEV
+    url: jdbc:mysql://localhost:3306/DEV?allowPublicKeyRetrieval=true&serverTimezone=UTC
     user: root
     password: secretpw
     table: FLYWAY_SCHEMA_HISTORY
