--- a/Dockerfile-test
+++ b/Dockerfile-test
@@ -18,4 +18,4 @@ COPY --from=build /app/target/Todo-api-0.0.1-SNAPSHOT.jar ./todo-api.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "todo-api.jar" , "--spring.profiles.activa=prod" ]
+ENTRYPOINT ["java", "-jar", "todo-api.jar" ]
