--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,3 +1,7 @@
+todo-api:
+  jwt-secret: "&dksasld334_$#s"
+  jwt-issuer: gabezy-todo-api
+---
 swagger:
   title: TODO API
   description: Documentação on-line da API
@@ -6,7 +10,7 @@ spring:
   application:
     name: Todo-api
   datasource:
-    url: jdbc:mysql://db:3306/DEV
+    url: jdbc:mysql://db-test:3306/TEST?allowPublicKeyRetrieval=true&serverTimezone=UTC&useSSL=false
     username: USER_TODO
     password: secret
     driver-class-name: com.mysql.jdbc.Driver
@@ -15,7 +19,7 @@ spring:
       maximum-pool-size: 5
   flyway:
     enabled: true
-    url: jdbc:mysql://db:3306/DEV
+    url: jdbc:mysql://db-test:3306/TEST
     user: root
     password: secretpw
     table: FLYWAY_SCHEMA_HISTORY
